--- a/solutions.css
+++ b/solutions.css
@@ -17,3 +17,37 @@
 .ex-2-square:active{
     width: 100%;
 }
+
+/* esercizio 3 */
+/* arrotondamento bordi graduale */
+.ex-3-square{
+    transition: border-radius 0.5s;
+}
+
+.ex-3-square:hover{
+    border-radius: 50%;
+}
+
+/* esercizio 4 */
+/* il quadrato sparisce */
+.ex-4-square{
+    transition: opacity 1s;
+}
+
+.ex-4-square:hover{
+    opacity: 0;
+}
+
+/* esercizio 5 */
+/* si ingrandisce in hover e si riduce in active */
+.ex-5-square{
+    transition: scale 1s;
+}
+
+.ex-5-square:hover{
+    scale:2;
+}
+
+.ex-5-square:active{
+    scale: 0.5;
+}
