--- a/solutions.css
+++ b/solutions.css
@@ -51,3 +51,10 @@
 .ex-5-square:active{
     scale: 0.5;
 }
+
+/* esercizio 6 */
+/* bianco e nero in over */
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
+
