--- a/solutions.css
+++ b/solutions.css
@@ -78,3 +78,15 @@
     border-radius: 20px;
     filter: grayscale(0.5) saturate(1.5);
 }
+
+/* esercizio 9 */
+/* due filtri bordi arrotondati e scala immagine */
+.ex-9-img{
+    transition: all 1s;
+}
+
+.ex-9-img:hover{
+    filter: sepia(2) contrast(1.5);
+    border-radius: 20px;
+    scale: 1.5;
+}
