--- a/solutions.css
+++ b/solutions.css
@@ -90,3 +90,25 @@
     border-radius: 20px;
     scale: 1.5;
 }
+
+/* esercizio 10 */
+/* animazione giro */
+.ex-10-icon{
+    animation-name: rotate;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-delay: 0;
+    animation-timing-function: linear;
+}
+
+@keyframes rotate {
+    0%{
+        transform: rotate(0);
+    }
+    
+    100%{
+        transform: rotate(-360deg);
+    }
+
+
+}
