--- a/solutions.css
+++ b/solutions.css
@@ -94,14 +94,13 @@
 /* esercizio 10 */
 /* animazione giro */
 .ex-10-icon{
-    animation-name: rotate;
+    animation-name: rotate-infinite;
     animation-duration: 1s;
     animation-iteration-count: infinite;
-    animation-delay: 0;
     animation-timing-function: linear;
 }
 
-@keyframes rotate {
+@keyframes rotate-infinite {
     0%{
         transform: rotate(0);
     }
@@ -110,5 +109,26 @@
         transform: rotate(-360deg);
     }
 
+}
 
+/* esercizio 11 */
+/* rotazione oraria fino 3/4 */
+.ex-11-icon:hover{
+    animation-name: rotate-right;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+@keyframes rotate-right {
+    0%{
+        transform: rotate(0);
+    }
+
+    90%{
+        transform: rotate(295deg);
+    }
+
+    100%{
+        transform: rotate(0);
+    }
 }
